# vita-slims-editor

./: CMakeLists.txt  LICENSE  README.md
src/: app.cpp  app.h  main.cpp  vita_setup_script.sh
src/core/: game_data.cpp  save_file.cpp  save_file.h
src/data/: rac_vita_games_data.h
src/ui/: file_browser.cpp  file_browser.h  keyboard.cpp  keyboard.h  save_editor.cpp  save_editor.h
src/utils/: colors.h  input.h
